Signed-off-by: sopelan <marcossopelana@gmail.com>

--- a/trabajo practico 3/TP3.cbp
+++ b/trabajo practico 3/TP3.cbp
@@ -48,6 +48,7 @@
 			<Option compilerVar="CC" />
 		</Unit>
 		<Unit filename="bibloteca.h" />
+		<Unit filename="data.csv" />
 		<Unit filename="main.c">
 			<Option compilerVar="CC" />
 		</Unit>
